# DisMusicPresence

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: configuration.md  contributing.md  installation.md  player-sources.md  project-overview.md  release.md  startup.md  usage.md
examples/linux/: dismediapresence.service
examples/macos/: com.streetkings.dismediapresence.plist
src/dis_media_presence/: __init__.py
src/dis_music_presence/: __init__.py  artwork.py  cli.py  discord_ipc.py  formatter.py  models.py  runtime.py  settings.py
src/dis_music_presence/sources/: __init__.py  apple_music.py  base.py  plex.py
tests/: test_apple_music.py  test_artwork.py  test_cli.py  test_discord_ipc.py  test_formatter.py  test_plex.py  test_settings.py
